--- a/app/src/main/res/layout/fragment_edit_sleep_daily_target.xml
+++ b/app/src/main/res/layout/fragment_edit_sleep_daily_target.xml
@@ -10,7 +10,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <NumberPicker
-        android:id="@+id/targetAmtPicker"
+        android:id="@+id/targetSleepAmtPicker"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -30,7 +30,7 @@
         android:text="Change"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/targetAmtPicker" />
+        app:layout_constraintTop_toBottomOf="@+id/targetSleepAmtPicker" />
 
     <Button
         android:id="@+id/cancelBtn"
