--- a/app/src/main/res/layout/activity_water_history.xml
+++ b/app/src/main/res/layout/activity_water_history.xml
@@ -15,9 +15,10 @@
         android:layout_marginTop="26dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="0dp"
-        app:contentPadding="10dp"
-        app:contentPaddingLeft="14dp"
-        app:contentPaddingRight="14dp"
+        app:contentPaddingBottom="12dp"
+        app:contentPaddingLeft="18dp"
+        app:contentPaddingRight="18dp"
+        app:contentPaddingTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbarHeader"
@@ -32,12 +33,25 @@
                 android:id="@+id/water_completion_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
                 android:fontFamily="@font/inter_medium"
                 android:text="@string/weekly_water_intake_completion"
                 android:textColor="#151515"
-                android:textSize="14sp"
+                android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/water_completion_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:nestedScrollingEnabled="true"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/water_completion_title"
+                tools:listitem="@layout/water_weekly_completion" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -50,9 +64,10 @@
         android:layout_marginTop="16dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="0dp"
-        app:contentPadding="10dp"
-        app:contentPaddingLeft="14dp"
-        app:contentPaddingRight="14dp"
+        app:contentPaddingBottom="12dp"
+        app:contentPaddingLeft="18dp"
+        app:contentPaddingRight="18dp"
+        app:contentPaddingTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/completionCard"
@@ -67,10 +82,11 @@
                 android:id="@+id/report_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
                 android:fontFamily="@font/inter_medium"
                 android:text="@string/water_tracker_report"
                 android:textColor="#151515"
-                android:textSize="14sp"
+                android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -78,8 +94,8 @@
                 android:id="@+id/water_weekly_avg_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/inter"
+                android:layout_marginTop="14dp"
+                android:fontFamily="sans-serif-medium"
                 android:text="@string/weekly_average"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -89,20 +105,21 @@
                 android:id="@+id/water_weekly_avg_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/inter"
+                android:fontFamily="sans-serif-medium"
                 android:text="@string/weekly_average"
                 android:textColor="@color/waterValueBlue"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@+id/water_weekly_avg_title"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/water_weekly_avg_title" />
+                app:layout_constraintTop_toTopOf="@+id/water_weekly_avg_title"
+                tools:ignore="VisualLintOverlap" />
 
             <TextView
                 android:id="@+id/water_monthly_avg_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:fontFamily="@font/inter"
+                android:fontFamily="sans-serif-medium"
                 android:text="@string/monthly_average"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +129,7 @@
                 android:id="@+id/water_monthly_avg_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/inter"
+                android:fontFamily="sans-serif-medium"
                 android:text="@string/monthly_average"
                 android:textColor="@color/waterValueBlue"
                 android:textSize="14sp"
@@ -125,7 +142,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:fontFamily="@font/inter"
+                android:fontFamily="sans-serif-medium"
                 android:text="@string/average_completion"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -135,7 +152,7 @@
                 android:id="@+id/water_avg_completion_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/inter"
+                android:fontFamily="sans-serif-medium"
                 android:text="@string/average_completion"
                 android:textColor="@color/waterValueBlue"
                 android:textSize="14sp"
@@ -149,7 +166,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="16dp"
-                android:fontFamily="@font/inter"
+                android:fontFamily="sans-serif-medium"
                 android:text="@string/drink_frequency"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -160,7 +177,7 @@
                 android:id="@+id/water_drink_freq_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/inter"
+                android:fontFamily="sans-serif-medium"
                 android:text="@string/drink_frequency"
                 android:textColor="@color/waterValueBlue"
                 android:textSize="14sp"
