--- a/app/src/main/res/layout/water_tracker_records.xml
+++ b/app/src/main/res/layout/water_tracker_records.xml
@@ -18,6 +18,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/water_record_day"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
         android:id="@+id/water_record_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
