--- a/app/src/main/res/drawable/added_icon.xml
+++ b/app/src/main/res/drawable/added_icon.xml
@@ -8,6 +8,6 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#486D86"
+      android:strokeColor="#00A300"
       android:strokeLineCap="round"/>
 </vector>
