--- a/app/src/main/res/layout/workout_item_list.xml
+++ b/app/src/main/res/layout/workout_item_list.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardViewOfExerciseList"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
+    android:layout_marginTop="5dp"
     android:layout_marginEnd="8dp"
-    >
+    android:layout_marginBottom="5dp"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/exerciseImg"
@@ -23,9 +28,11 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
-            android:id="@+id/linearLayout5"
+            android:id="@+id/workoutListLinearLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/exerciseAddBtn"
@@ -44,26 +51,56 @@
                 android:id="@+id/exerciseDesc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Desc"
+                android:text="@string/targetBodyPart"
                 android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/exerciseRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="4 rep x 4 sets"
+                android:text="4 rep"
                 android:textSize="16sp" />
 
         </LinearLayout>
 
         <ImageView
+            android:layout_marginEnd="5dp"
+            android:layout_marginStart="5dp"
             android:id="@+id/exerciseAddBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
             android:src="@drawable/add_workout_icon"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/deleteExercisebtn"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/workoutListLinearLayout"
             app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+
+        <ImageView
+            android:layout_marginEnd="5dp"
+            android:layout_marginStart="5dp"
+            android:id="@+id/deleteExercisebtn"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:src="@drawable/delete_red_icon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintEnd_toStartOf="@+id/editExerciseBtn"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/exerciseAddBtn"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:layout_marginEnd="5dp"
+            android:layout_marginStart="5dp"
+            android:id="@+id/editExerciseBtn"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:src="@drawable/edit_pen"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/deleteExercisebtn"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.card.MaterialCardView>
