--- a/app/src/main/res/layout/workout_plan_name_card.xml
+++ b/app/src/main/res/layout/workout_plan_name_card.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="10dp"
+    app:cardCornerRadius="20dp"
     app:cardElevation="8dp"
     app:cardMaxElevation="5dp"
     android:layout_margin="10dp">
@@ -60,22 +60,23 @@
 
             >
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:src="@drawable/add_workout_icon"
                 android:id="@+id/addworkout_btn"
                 android:layout_marginEnd="10dp"
                 />
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:src="@drawable/workout_play_icon"
                 android:id="@+id/playWorkout_btn"
                 android:layout_marginEnd="10dp"
                 />
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
                 android:src="@drawable/vector"
                 android:id="@+id/settings_workout_btn"
                 android:layout_marginEnd="10dp"
