--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="login_primary_color">#EEEEEE</color>
-    <color name="green">#486D86</color>
+    <color name="blue">#486D86</color>
+    <color name="green">#00FF00</color>
     <color name="grey">#808080</color>
     <color name="textDarkGreyColor">#3E3E3E</color>
     <color name="btnBorderColor">#818181</color>
