--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -5,10 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/login_primary_color"
-    android:padding="20dp"
-    tools:ignore="MissingConstraints">
+    android:padding="20dp">
 
     <TextView
+        android:textAlignment="center"
+        android:layout_marginTop="20dp"
         android:id="@+id/login_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,20 +17,20 @@
         android:textColor="@color/black"
         android:textSize="36sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="20dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="20dp" />
 
-    <TextView
-        android:id="@+id/login_sub_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:lineHeight="20sp"
-        android:text="@string/sub_title"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="69dp" />
+<!--    <TextView-->
+<!--        android:id="@+id/login_sub_title"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:lineHeight="20sp"-->
+<!--        android:text="@string/sub_title"-->
+<!--        android:textColor="@color/black"-->
+<!--        android:textSize="14sp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        tools:layout_editor_absoluteY="69dp" />-->
 
     <ImageView
         android:id="@+id/img_illustration_started"
@@ -62,7 +63,7 @@
         style="@style/ButtonGreen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/button_register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
