--- a/app/src/main/res/layout/activity_login_main.xml
+++ b/app/src/main/res/layout/activity_login_main.xml
@@ -49,7 +49,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_login"
-        style="@style/ButtonGreen"
+        style="@style/ButtonBlue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -60,7 +60,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_register"
-        style="@style/ButtonGreen"
+        style="@style/ButtonBlue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
