--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,6 +26,13 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <!-- Button Style Color -->
+    <style name="ButtonBlue">
+        <item name="android:background">@drawable/background_blue_btn</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 
     <!-- Login Title Style -->
     <style name="LoginTitle">
@@ -36,7 +43,7 @@
 
     <!-- Login Sub Title Style -->
     <style name="LoginSubTitle">
-        <item name="android:textColor">@color/grey</item>
+        <item name="android:textColor">@color/blue</item>
         <item name="android:textSize">14sp</item>
     </style>
 
