--- a/app/src/main/res/layout/add_workout_activity.xml
+++ b/app/src/main/res/layout/add_workout_activity.xml
@@ -14,7 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="20dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbarHeader">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -31,7 +34,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/filterTypeExercise"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:queryHint="Enter Exercise name....." />
+                app:queryHint="Enter name....." />
 
             <Spinner
                 android:minHeight="40dp"
