--- a/app/src/main/res/layout/fragment_add_workout_pop_up.xml
+++ b/app/src/main/res/layout/fragment_add_workout_pop_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment_add_workout_pop_up"
+    tools:context=".workout.fragment_add_workout_pop_up"
     android:clipChildren="false"
     android:clipToPadding="false"
 
